syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/matheuspolitano/GadgetHub/pkg/pb";

message CreateUserRequest {
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone = 5;
    string password = 6;
}


message CreateUserResponse {
    User user = 1;
}


